--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -140,7 +140,7 @@ footer {
   justify-content: center;
   align-items: center;
   bottom: 0;
-  margin-top: auto;
+  margin-top: 100%;
   }
 
 footer p {
